manifests/bootstrapping/argocd/cilium-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all-to-argocd-application-controller"
  namespace: argocd
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-application-controller
      toPorts:
        - ports:
            - port: "8082"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-all-to-argocd-repo-server"
  namespace: argocd
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - world
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-repo-server
      toPorts:
        - ports:
            - port: "8084"
